# weather-cli

./: .gitignore  LICENSE  README.md  api_client.py  formatter.py  pyproject.toml  weather.py
docs/: INSTALL.md
src/weather_enquire/: __init__.py  api_client.py  cli.py
