[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "weather-enquire"
version = "0.2.1"
description = "A polished Python CLI for fetching live weather and multi-day forecasts in your terminal, with on-disk response caching."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Narasimharao Bhavirisetty", email = "thirukumarannc@gmail.com" }
]
keywords = ["weather", "cli", "openweather", "terminal", "forecast", "rich"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
]

[project.urls]
Homepage = "https://github.com/narasimharao2743/weather-cli"
Repository = "https://github.com/narasimharao2743/weather-cli"
Issues = "https://github.com/narasimharao2743/weather-cli/issues"

[project.scripts]
weather-enquire = "weather_enquire.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
